--- a/ecommerce-last/src/app/pages/auth/compononets/register/register.component.html
+++ b/ecommerce-last/src/app/pages/auth/compononets/register/register.component.html
@@ -1,1 +1,30 @@
-<p>register works!</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="wrapper fadeInDown">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+
+    <!-- Icon -->
+    <div class="fadeIn first">
+      <img src="/assets/images/Adidas Logo.jpg" id="icon" alt="User Icon" />
+    </div>
+
+    <!-- Login Form -->
+    <form [formGroup]="form">
+      <input type="text" id="firstName" class="fadeIn second" name="firstName" placeholder="First Name"  formControlName="firstName" >
+      <input type="text" id="lastName" class="fadeIn second" name="first" placeholder="Last Name " formControlName="lastName">
+      <input type="text" id="email" class="fadeIn third" name="email" placeholder="Email Address" formControlName="email">
+      <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password" formControlName="password">
+      <input type="text" id="confirmPassword" class="fadeIn third" name="confirmPassword" placeholder="Confirm Password" formControlName="confirmPassword">
+      
+      <input type="submit" class="fadeIn fourth" value="Register">
+    </form>
+
+    <!-- Remind Passowrd -->
+   
+
+  </div>
+</div>
