--- a/ecommerce-last/src/app/pages/auth/compononets/register/register.component.html
+++ b/ecommerce-last/src/app/pages/auth/compononets/register/register.component.html
@@ -13,12 +13,52 @@
     </div>
 
     <!-- Login Form -->
-    <form [formGroup]="form">
+    <form [formGroup]="form" (ngSubmit)="submit()">
       <input type="text" id="firstName" class="fadeIn second" name="firstName" placeholder="First Name"  formControlName="firstName" >
-      <input type="text" id="lastName" class="fadeIn second" name="first" placeholder="Last Name " formControlName="lastName">
+      <div
+      *ngIf="
+        form.get('firstName')?.invalid &&
+        form.get('firstName')?.touched
+      "
+    >
+      <small>  Firstname is required! </small>
+    </div>
+      <input type="text" id="lastName" class="fadeIn second" name="lastName" placeholder="Last Name " formControlName="lastName">
+      <div
+      *ngIf="
+        form.get('lastName')?.invalid &&
+        form.get('lastName')?.touched
+      "
+    >
+      <small>  Last Name is required! </small>
+    </div>
       <input type="text" id="email" class="fadeIn third" name="email" placeholder="Email Address" formControlName="email">
+      <div
+      *ngIf="
+        form.get('email')?.invalid &&
+        form.get('email')?.touched
+      "
+    >
+      <small>  Email is required! </small>
+    </div>
       <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password" formControlName="password">
+      <div
+      *ngIf="
+        form.get('password')?.invalid &&
+        form.get('password')?.touched
+      "
+    >
+      <small>  Passowrd is required! </small>
+    </div>
       <input type="text" id="confirmPassword" class="fadeIn third" name="confirmPassword" placeholder="Confirm Password" formControlName="confirmPassword">
+      <div
+      *ngIf="
+        form.get('confirmPassword')?.invalid &&
+        form.get('confirmPassword')?.touched
+      "
+    >
+      <small>  Confirm Password is required !  </small>
+    </div>
       
       <input type="submit" class="fadeIn fourth" value="Register">
     </form>
