--- a/ecommerce-last/src/app/pages/auth/compononets/register/register.component.scss
+++ b/ecommerce-last/src/app/pages/auth/compononets/register/register.component.scss
@@ -1,6 +1,17 @@
 
 /* BASIC */
 
+input {
+  &.ng-invalid.ng-touched {
+    border: 0.1px solid red;
+  }
+}
+
+small {
+  color: red;
+}
+
+
 html {
     background-color: #56baed;
   }
