--- a/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
+++ b/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
@@ -16,12 +16,30 @@
           <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
         </form>
          
-        <div class="col-md-3 text-end">
+
+        <ng-container *ngIf="userIsAuthenticated; else notAuthenticated">
+          <div class="dropdown text-end">
+            <a href="#" class="d-block link-dark text-decoration-none " data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fas fa-chevron-circle-down fa-lg"></i>   
+            </a>
+            <ul class="dropdown-menu text-small">
+              <li><a class="dropdown-item" href="#">New project...</a></li>
+              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" (click)="signOut()">Sign out</a></li>
+            </ul>
+          </div>
+        </ng-container>
+        <ng-template #notAuthenticated>
+          <div class="col-md-3 text-end">
             <button routerLink="/auth/login"  type="button" class="btn btn-outline-primary me-2">Login</button>
             <button routerLink="/auth/register"  type="button" class="btn btn-primary">Register</button>
           </div>
+        </ng-template>
+        
 
-        <div class="dropdown text-end">
+        <!-- <div class="dropdown text-end">
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
           </a>
@@ -32,7 +50,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Sign out</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </header>
