--- a/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
+++ b/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
@@ -23,9 +23,9 @@
               <i class="fas fa-chevron-circle-down fa-lg"></i>   
             </a>
             <ul class="dropdown-menu text-small">
-              <li><a class="dropdown-item" href="#">New project...</a></li>
-              <li><a class="dropdown-item" href="#">Settings</a></li>
-              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="#">Contant Manager</a></li>
+              <li><a class="dropdown-item" href="#">Orders</a></li>
+
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" (click)="signOut()">Sign out</a></li>
             </ul>
