--- a/ecommerce-last/src/app/pages/home/home.component.html
+++ b/ecommerce-last/src/app/pages/home/home.component.html
@@ -1,11 +1,8 @@
 <div>
  <div class="banner"></div>
  <div class="product-items">
- <app-product-card></app-product-card>
- <app-product-card></app-product-card>
- <app-product-card></app-product-card>
- <app-product-card></app-product-card>
- <app-product-card></app-product-card>
+ <app-product-card *ngFor="let product of products" [product]="product" ></app-product-card>
+
 
   
     </div>
