access to Add cart

--- a/ecommerce-last/src/app/features/product-card/product-card.component.html
+++ b/ecommerce-last/src/app/features/product-card/product-card.component.html
@@ -14,7 +14,7 @@
            {{product.price | currency: 'USD': true}}
         </div>
         <div>
-            <button type="button" class="btn btn-outline-primary me-2">Add cart</button>
+            <button  *appAuthAccess type="button" class="btn btn-outline-primary me-2">Add cart</button>
         </div>
       </div>
       
