finished first part

--- a/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
+++ b/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
@@ -15,6 +15,10 @@
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
           <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
         </form>
+
+        <div>
+          {{cartCount$ | async}}
+        </div>
          
 
         <ng-container *ngIf="userIsAuthenticated; else notAuthenticated">
