--- a/ecommerce-last/src/app/features/main-layout/components/header/header.component.scss
+++ b/ecommerce-last/src/app/features/main-layout/components/header/header.component.scss
@@ -5,3 +5,21 @@
         }
     }
     
+
+    .cart {
+        position: relative;
+        text-decoration: none;
+        color: black;
+
+        .cart-badge {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            background-color: #cb2929;
+            color: white;
+            padding: 0 5px;
+            border-radius: 50%;
+            font-size: 0.7rem;
+        }
+        
+    }
