--- a/ecommerce-last/src/app/pages/manager/pages/categories/category-add-edit/category-add-edit.component.html
+++ b/ecommerce-last/src/app/pages/manager/pages/categories/category-add-edit/category-add-edit.component.html
@@ -1,1 +1,7 @@
-<p>category-add-edit works!</p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" placeholder="Name" formControlName="name">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
