--- a/ecommerce-last/src/app/pages/manager/pages/products/products.component.html
+++ b/ecommerce-last/src/app/pages/manager/pages/products/products.component.html
@@ -1,1 +1,37 @@
-<p>products works!</p>
+<div class="p-2 d-flex justify-content-end"> 
+  <button  routerLink="/manager/categories/create" class="btn btn-primary">Add</button>
+</div>   
+
+
+
+<div>
+  <table class="table">
+      <thead>
+      <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Category</th>
+      
+          <th></th>
+      </tr>
+      </thead>
+    <tbody>
+      <tr *ngFor="let item of products">
+          <td>
+            <img [src]="item.image" width="100px" >
+          </td>
+          <td>{{item?.name}}</td>
+          <td>{{item?.price | currency: 'USD'}}</td>
+          <td>{{item?.category?.name}}</td>
+     
+     
+          <td>
+              <button type="button" class="btn btn-secondary mr-2" [routerLink]="['/manager/categories/edit', item.id ]">Edit</button>
+              <button type="button" class="btn btn-danger" (click)="deleteItem(item.id)">Remove</button>
+          </td>
+      </tr>
+    </tbody>
+  </table>  
+</div>
+
