--- a/ecommerce-last/src/app/pages/manager/pages/products/products.component.html
+++ b/ecommerce-last/src/app/pages/manager/pages/products/products.component.html
@@ -27,8 +27,8 @@
      
      
           <td>
-              <button type="button" class="btn btn-secondary mr-2" [routerLink]="['/manager/products/edit', item.id ]">Edit</button>
-              <button type="button" class="btn btn-danger" (click)="deleteItem(item.id)">Remove</button>
+              <button class="btn btn-secondary mr-2" [routerLink]="['/manager/products/edit', item.id ]">Edit</button>
+              <button class="btn btn-danger" (click)="deleteItem(item.id)">Remove</button>
           </td>
       </tr>
     </tbody>
