--- a/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
+++ b/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
@@ -11,7 +11,17 @@
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+          <input type="search" 
+          class="form-control" 
+          placeholder="Search..." 
+          aria-label="Search"
+        
+          [ngModel] = "searchInput"
+          (ngModelChange)="search($event)"
+          [ngModelOptions]="{standalone: true}"
+
+          >
+
         </form>
 
         <a routerLink="/cart" class="cart">
