--- a/ecommerce-last/src/app/pages/products/products.component.html
+++ b/ecommerce-last/src/app/pages/products/products.component.html
@@ -14,8 +14,13 @@
   </div>
  </div>
  
-   <div class="flex-items product-items" >
-    <app-product-card *ngFor="let product of products" [product]="product" ></app-product-card>
+   <div class="flex-fill" >
+    <div>
+      <input type="search"  class="form-control" placeholder="Search" [ngModel]="search" (ngModelChange)="searchHandle($event)" >
+    </div>
+    <div  class=" product-items" >
+      <app-product-card *ngFor="let product of products" [product]="product" ></app-product-card>
+    </div>
     
    </div>
  </div>
