--- a/ecommerce-last/src/app/features/product-card/product-card.component.html
+++ b/ecommerce-last/src/app/features/product-card/product-card.component.html
@@ -9,12 +9,12 @@
       <div class="p-2">
         <h6> {{product.name}} </h6>
       </div>
-      <div  class="d=flex justify-content-between ">
-        <div>
+      <div  class="d=flex justify-content-between align-items-center p-2 ">
+        <div class="price" >
            {{product.price | currency: 'USD': true}}
         </div>
         <div>
-            <button  *appAuthAccess type="button" class="btn btn-outline-primary me-2" (click)="addToCart()" >Add cart</button>
+            <button  *appAuthAccess type="button" class="btn btn-outline-primary me-2" (click)="addToCart($event)" >Add cart</button>
         </div>
       </div>
       
