--- a/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
+++ b/ecommerce-last/src/app/features/main-layout/components/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start gap-3">
         <a routerLink="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none logo ">
-         <img src="/assets/images/Logo.png">
+         <img src="/assets/images/Adidas Logo.jpg">
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
