--- a/ecommerce-last/src/app/features/product-card/product-card.component.html
+++ b/ecommerce-last/src/app/features/product-card/product-card.component.html
@@ -5,7 +5,7 @@
 
     </div>
 
-          ]
+          
       <div class="p-2">
         <h6> {{product.name}} </h6>
       </div>
@@ -14,7 +14,7 @@
            {{product.price | currency: 'USD': true}}
         </div>
         <div>
-            <button  *appAuthAccess type="button" class="btn btn-outline-primary me-2" (click)="addToCart()" >Add cart</button>
+            <button  *appAuthAccess type="button" class="btn btn-outline-primary me-2" (click)="addToCart($event)" >Add cart</button>
         </div>
       </div>
       
