--- a/ecommerce-last/src/app/features/product-card/product-card.component.scss
+++ b/ecommerce-last/src/app/features/product-card/product-card.component.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    cursor: pointer;
  
     border: 1px solid #ccc;
     border-radius: 4px;
