--- a/ecommerce-last/src/app/pages/products/product-detail/product-detail.component.html
+++ b/ecommerce-last/src/app/pages/products/product-detail/product-detail.component.html
@@ -21,5 +21,6 @@
 
 
 <div class="product-items">
-    <app-product-card *ngFor="let similarProduct of similarProducts" [product]="product" ></app-product-card>
+    <app-product-card *ngFor="let similarProduct of similarProducts" [product]="similarProduct" ></app-product-card>
+    
        </div>
