--- a/ecommerce-last/src/app/pages/home/home.component.html
+++ b/ecommerce-last/src/app/pages/home/home.component.html
@@ -1,6 +1,7 @@
 <div>
  <div class="banner"></div>
- <div class="product-items">
- <app-product-card *ngFor="let product of products" [product]="product" ></app-product-card>
+ <div class="row product-items">
+ <app-product-card  class="col-12 col-sm-12 col-md-6 col-lg-3 text-center"
+ *ngFor="let product of products" [product]="product" ></app-product-card>
     </div>
 </div>
