adding USD sign

--- a/ecommerce-last/src/app/pages/cart/cart.component.html
+++ b/ecommerce-last/src/app/pages/cart/cart.component.html
@@ -13,9 +13,9 @@
           <tbody>
             <tr *ngFor="let item of cartItems">
                 <td>{{item.item?.name}}</td>
-                <td>{{item.item?.price}}</td>
+                <td>{{item.item?.price  | currency: 'USD': true}}</td>
                 <td>{{item.quantity}}</td>
-                <td>{{item.total}}</td>
+                <td>{{item.total  | currency: 'USD': true}}</td>
                 <td>
                     <button type="button" class="btn btn-danger" (click)="removeItem(item)">Remove</button>
                 </td>
@@ -24,7 +24,7 @@
         </table>
     </div>
     <div>
-        <h3> Total Price: {{cartSum}}</h3>
+        <h3> Total Price: {{cartSum  | currency: 'USD': true}}</h3>
         <button class="btn btn-success" (click)="checkout()" >Checkout</button>
     </div>
 </div>
